--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,8 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #1f1f1f;
+  background-color: #faf9f7;
+  color: #1f1d1a;
   font-weight: 400;
   line-height: 1.75;
 }
